--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  google_fonts: ^6.2.1
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
@@ -60,7 +62,14 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - images/
+    - images/all/
+    - images/shoes/
+    - images/beauty/
+    - images/women fashion/
+    - images/men fashion/
+    - images/jewelry/ 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
