--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
     - images/women fashion/
     - images/men fashion/
     - images/jewelry/ 
+    - images/jewelry/necklace-jewellery.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
