--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  geolocator: ^9.0.1
+  image_picker: ^0.8.7
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -64,13 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
-    - images/all/
-    - images/shoes/
-    - images/beauty/
-    - images/women fashion/
-    - images/men fashion/
-    - images/jewelry/ 
-    - images/jewelry/necklace-jewellery.png
+    - images/logo.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
