formmulario de orden con validaciones y captura de imagen y geolocalizacion , enviamos en consola correctamente el post pero visualmente sale error

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   geolocator: ^9.0.1
   image_picker: ^0.8.7
+  permission_handler: ^10.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
